<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_menu">

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.damaskkebab.ui.fragments.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu">
        <action
            android:id="@+id/action_navigation_menu_to_foodListFragment"
            app:destination="@id/navigation_foodList" />

    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.damaskkebab.ui.fragments.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.damaskkebab.ui.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_foodList"
        android:name="com.example.damaskkebab.ui.fragments.FoodListFragment"
        android:label="fragment_food_list"
        tools:layout="@layout/fragment_food_list">
        <argument
            android:name="categoryId"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_foodList_pop_including_navigation_menu2"
            app:popUpTo="@id/navigation_menu"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_foodList_to_foodDetailFragment"
            app:destination="@id/foodDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/foodDetailFragment"
        android:name="com.example.damaskkebab.ui.fragments.FoodDetailFragment"
        android:label="fragment_food_detail"
        tools:layout="@layout/fragment_food_detail">
        <argument
            android:name="foodId"
            app:argType="string" />
    </fragment>
</navigation>