<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.FoodDetailFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.damaskkebab.utils.DKTextViewBold
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/product_title"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.example.damaskkebab.utils.DKTextView
                    android:id="@+id/detail_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="24sp" />
                <com.example.damaskkebab.utils.DKTextView
                    android:id="@+id/detail_curency"
                    android:layout_width="match_parent"

                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/ruble"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="360dp"
                android:layout_height="360dp"
                android:layout_gravity="center"
                android:src="@drawable/pizza1" />

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/detail_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/minus" />

                <TextView
                    android:id="@+id/detail_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="1"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/detail_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/plus" />

            </LinearLayout>

            <com.example.damaskkebab.utils.DKTextView
                android:id="@+id/detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Description"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>

    <com.example.damaskkebab.utils.DKButton
        android:id="@+id/detail_add_to_cart_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/add_to_cart"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>